@@ -4,13 +4,7 @@ from zope import schema
 from zope.interface import Interface
 from eea.relations.config import IAsyncService
 from eea.relations.config import EEAMessageFactory as _
-try:
-    from plone.stringinterp import interfaces
-    IContextWrapper = interfaces.IContextWrapper
-except (ImportError, AttributeError):
-    class IContextWrapper(Interface):
-        """ Context wrapper used by async events
-        """
+from plone.stringinterp.interfaces import IContextWrapper
 
 
 class IRelatedItemsAction(Interface):
@@ -41,3 +35,8 @@ class IRelatedItemsAction(Interface):
             required=False,
             description=_(u"Perform action asynchronous")
         )
+
+__all__ = [
+    IRelatedItemsAction.__name__,
+    IContextWrapper.__name__,
+]
